Kleine Ergänzungen und Korrekturen

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -5,6 +5,8 @@
 \title{Dokumentation BLDC}
 \newcommand{\BrushlessPath}{src}
 \newcommand{\DasAndereTeam}{T27 }
+\newcommand{\BLDCTeams}{T27 und T32}
+\newcommand{\BLDCcollab}{Dieses Kapitel ist eine Zusammenarbeit der Gruppen \BLDCTeams. }
 
 \begin{document}
 
