--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -15,6 +15,8 @@
 \tableofcontents
 \clearpage
 
+\input{src/Hardwarezusammenarbeit}
+\newpage
 \input{src/Ansteuerung}
 \newpage
 \input{src/Testbericht}
