--- a/doc/src/Hardwarezusammenarbeit.tex
+++ b/doc/src/Hardwarezusammenarbeit.tex
@@ -1,5 +1,38 @@
+\ifSTANDALONE
+\section{Hardware}
+\fi
+\ifEMBED
 \subsection{Hardware}
-    Die Elektrotechnik-Studierenden aus mehreren Gruppen haben sich zusammengeschlossen um gemeinsame Probleme anzugehen. Dabei handelt es sich um die Ansteuerung, die benötigte Hard- und Software um Motoren anzusteuern und gegebenenfalls zu regeln. In diesem Zusammenschluss wurde drei Gruppen gebildet, um Lösungen für DC-, Stepper- und Brushless-Motoren auszuarbeiten. Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem wo möglich denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert, Synergien nutzt um eine bessere Lösung zu erarbeiten. Auf diese Weise kann das Team übergreifende Arbeiten im Rahmen der \enquote{PREN} erlernt und geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn Rechnung getragen. Die Gruppen und deren Mitglieder sind in der folgenden Aufzählung ersichtlich:
+\fi
+Die Elektrotechnik-Studierenden aus mehreren Gruppen haben sich
+zusammengeschlossen um gemeinsame Probleme anzugehen. Dabei handelt es sich
+um die Ansteuerung, die benötigte Hard- und Software um Motoren anzusteuern
+und gegebenenfalls zu regeln. In diesem Zusammenschluss wurde drei Gruppen
+gebildet, um Lösungen für DC-, Stepper- und Brushless-Motoren auszuarbeiten.
+Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem wo
+möglich denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
+Synergien nutzt um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
+das Team übergreifende Arbeiten im Rahmen der \enquote{PREN} erlernt und
+geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn
+Rechnung getragen. Die Gruppen und deren Mitglieder sind in der folgenden
+Aufzählung ersichtlich.
+
+\ifSTANDALONE
+	\begin{table}[h!]
+		\centering
+		\begin{tabular}{l l}
+			Projekt		& Team \\
+			\hline
+			DC Motoren	& 39 \\
+			Schrittmotor	& 27, 38 \\
+			BLDC Motor	& 27, 32 \\
+		\end{tabular}
+		\caption{Übersicht der PREN-ET Projektgruppen}
+		\label{tab:pren-et-overview}
+	\end{table}
+\fi
+
+\ifEMBED
     \begin{itemize}
         \item[$\star$] DC-Motoren-Gruppe\\
             Besteht aus Elektronik Student des Teams 39.
@@ -8,3 +41,4 @@
         \item[$\star$] Brushless-Motoren-Gruppe\\
             Besteht aus den Elektronik Studenten des Teams 27 und 32.
     \end{itemize}
+\fi
