Umbau der bestehenden Elemente durchgeführt

--- a/doc/docs/content.tex
+++ b/doc/docs/content.tex
@@ -2,6 +2,7 @@
 \newpage
 \input{../src/Hardwarezusammenarbeit}
 \input{../src/Ansteuerung}
+\newpage
 \input{../src/Testbericht}
 \input{quellen}
 \listoffigures
