--- a/doc/src/Ansteuerung.tex
+++ b/doc/src/Ansteuerung.tex
@@ -95,7 +95,7 @@
         \ref{abb:PrinzipRekonstruktion} zeigt die Schaltung, mit der dies 
         realisiert werden kann. 
         \ifSTANDALONE
-        \begin{figure}
+	\begin{figure}[h!]
             \centering
             \includegraphics[scale=0.46]{\BrushlessPath/Bilder/PrinzipDerRekonstruktion.png}
            	\caption{Schema des Rekonstruktionsprinzip \protect\cite{HSLU:Pluess}}
