ersten Draft für Standalone Doku erstellt

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -2,6 +2,10 @@
 
 \usepackage{layout}
 
+\input{./src/booleans}
+
+\setboolean{EMBED}{true}
+
 \title{Dokumentation BLDC}
 \newcommand{\BrushlessPath}{src}
 \newcommand{\DasAndereTeam}{T27 }
