--- a/doc/docs/content.tex
+++ b/doc/docs/content.tex
@@ -4,5 +4,11 @@
 \input{../src/Ansteuerung}
 \newpage
 \input{../src/Testbericht}
+\newpage
+\input{../src/fallback}
+\newpage
+\input{../src/encoder}
+\clearpage
 \input{quellen}
 \listoffigures
+\listoftables
