Doku noch etwas nachbearbeitet

--- a/doc/src/encoder.tex
+++ b/doc/src/encoder.tex
@@ -102,7 +102,7 @@ Beispiels mit einem Magneten am Rotationskörper.
 \ifEMBED
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.75\textwidth]{../src/Bilder/AH180N_functional.png}
+	\includegraphics[width=0.75\textwidth]{./src/Bilder/AH180N_functional.png}
 	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Scahlters AH180N}
 	\label{fig:AH180N_functional}
 \end{figure}
@@ -113,8 +113,7 @@ und ist für diesen Anwendungsfall sehr effizient. Zugehörige
 Hall-Effekt-Schalter lassen sich einfach montieren und sind gegen Störungen
 sehr robust. Ein mögliches Modell für einen Hall-Effekt-Schalter ist der
 AH180N. Dieser bietet einen Open-Drain Ausgang welcher somit logische Pegel
-liefert (siehe Abbildung \ref{fig:AH180N_functional}).
-
-Interessant ist diese Art von Drehzahl-Geber insbesondere durch ihren
-geringen Preis, denn solche Hall-Effekt-Schalter wie der AH180N befinden
+liefert (siehe Abbildung \ref{fig:AH180N_functional}). Interessant ist diese
+Art von Drehzahl-Geber insbesondere durch ihren geringen Preis, denn solche
+Hall-Effekt-Schalter wie der AH180N befinden
 sich im Preissegment < 1 CHF.
