--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -25,6 +25,10 @@
 \newpage
 \input{src/Testbericht}
 \newpage
+\input{src/fallback}
+\newpage
+\input{src/encoder}
+\clearpage
 
 \begin{flushleft}
     \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
