--- a/doc/src/Hardwarezusammenarbeit.tex
+++ b/doc/src/Hardwarezusammenarbeit.tex
@@ -14,31 +14,17 @@ möglich denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
 Synergien nutzt um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
 das Team übergreifende Arbeiten im Rahmen der \enquote{PREN} erlernt und
 geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn
-Rechnung getragen. Die Gruppen und deren Mitglieder sind in der folgenden
-Aufzählung ersichtlich.
-
-\ifSTANDALONE
-	\begin{table}[h!]
-		\centering
-		\begin{tabular}{l l}
-			Projekt		& Team \\
-			\hline
-			DC Motoren	& 39 \\
-			Schrittmotor	& 27, 38 \\
-			BLDC Motor	& 27, 32 \\
-		\end{tabular}
-		\caption{Übersicht der PREN-ET Projektgruppen}
-		\label{tab:pren-et-overview}
-	\end{table}
-\fi
-
-\ifEMBED
-    \begin{itemize}
-        \item[$\star$] DC-Motoren-Gruppe\\
-            Besteht aus Elektronik Student des Teams 39.
-        \item[$\star$] Stepper-Motoren-Gruppe\\
-            Besteht aus den Elektronik Student des Teams 38 und 27.
-        \item[$\star$] Brushless-Motoren-Gruppe\\
-            Besteht aus den Elektronik Studenten des Teams 27 und 32.
-    \end{itemize}
-\fi
+Rechnung getragen. Die Gruppen und deren Mitglieder sind in der Tabelle 
+\ref{tab:pren-et-overview} aufgeführt.
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{l l}
+		Projekt		& Team \\
+		\hline
+		DC Motoren	& 39 \\
+		Schrittmotor	& 27, 38 \\
+		BLDC Motor	& 27, 32 \\
+	\end{tabular}
+	\caption{Übersicht der PREN-ET Projektgruppen}
+	\label{tab:pren-et-overview}
+\end{table}
