--- a/doc/src/encoder.tex
+++ b/doc/src/encoder.tex
@@ -102,7 +102,7 @@ Beispiels mit einem Magneten am Rotationskörper.
 \ifEMBED
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.75\textwidth]{./src/Bilder/AH180N_functional.png}
+	\includegraphics[width=0.75\textwidth]{\BrushlessPath/Bilder/AH180N_functional.png}
 	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Scahlters AH180N}
 	\label{fig:AH180N_functional}
 \end{figure}
